--- a/released-app/package.json
+++ b/released-app/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
+    "@tailwindcss/postcss": "^4.1.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.509.0",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,9 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.6",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6"
+    "autoprefixer": "^10.4.21"
   }
 }
