beginning id flow

--- a/released-app/backend/.env
+++ b/released-app/backend/.env
@@ -1,2 +1,4 @@
 SECRET_KEY=supersecretkey
 DATABASE_URL=sqlite:///app.db
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+JWT_SECRET=your_jwt_signing_secret
