--- a/released-app/android/build.gradle
+++ b/released-app/android/build.gradle
@@ -22,6 +22,11 @@ allprojects {
         google()
         mavenCentral()
     }
+    tasks.withType(JavaCompile).configureEach {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+        // options.release = 17
+    }
 }
 
 task clean(type: Delete) {
