--- a/released-app/package.json
+++ b/released-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "^7.3.0",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/cli": "^7.3.0",
     "@capacitor/core": "^7.3.0",
     "@capacitor/ios": "^7.3.0",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.2",
     "@testing-library/dom": "^10.4.0",
