removing .env from git control

--- a/released-app/backend/.env
+++ b/released-app/backend/.env
@@ -1,4 +1,4 @@
 SECRET_KEY=supersecretkey
 DATABASE_URL=sqlite:///app.db
 GOOGLE_CLIENT_ID=543449768371-o7c0svosbbbh45fldq3q2ei68k86nnvf.apps.googleusercontent.com
-JWT_SECRET=your_jwt_signing_secret
+JWT_SECRET=rbq38WvdT7p!kJfP9g0ZLpNczU8x2dD@Efs9X3BmLqjFh7Z
